--- a/recipes/iskender.html
+++ b/recipes/iskender.html
@@ -6,5 +6,10 @@
     </head>
     <body>
         <h1>Iskender Recipe</h1>
+        <img src="./media/iskender-img.webp" alt="A plate of iskender">
+        <h2>Description</h2>
+        <p>Iskender is a turkish dish dating back to the Ottoman empire.</p>
+        <p>It consists of slices of meat on top of sliced bread with tomato sauce on top.</p>
+        <p>It is commonly served with yogurt on the side</p>
     </body>
 </html>
