Add ingredients section

--- a/recipes/iskender.html
+++ b/recipes/iskender.html
@@ -11,5 +11,12 @@
         <p>Iskender is a turkish dish dating back to the Ottoman empire.</p>
         <p>It consists of slices of meat on top of sliced bread with tomato sauce on top.</p>
         <p>It is commonly served with yogurt on the side</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Slices of meat</li>
+            <li>Sliced bread</li>
+            <li>Tomato sauce</li>
+            <li>Yogurt</li>
+        </ul>
     </body>
 </html>
