Add steps section

--- a/recipes/iskender.html
+++ b/recipes/iskender.html
@@ -18,5 +18,14 @@
             <li>Tomato sauce</li>
             <li>Yogurt</li>
         </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Bake bread</li>
+            <li>Prepare tomato sauce</li>
+            <li>Slice the spining meat</li>
+            <li>Cut the bread into small pieces</li>
+            <li>Put together plate with bread at the bottom, meat on the top, drizzls of tomato sauce and yogurt on the side</li>
+            <li>Enjoy!</li>
+        </ol>
     </body>
 </html>
