--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Lasagna Recipe</h1>
+        <img src="./media/lasagna-img.jpeg" alt="A plate of lasagna">
     </body>
 </html>
