--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Pasta Recipe</h1>
+        <img src="./media/pasta-img.webp" alt="A pasta dish">
     </body>
 </html>
