Add description section to the 2 new recipes

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,8 @@
     <body>
         <h1>Lasagna Recipe</h1>
         <img src="./media/lasagna-img.jpeg" alt="A plate of lasagna">
+        <h2>Description</h2>
+        <p>Lasagna is an Italian dish.</p>
+        <p>Its making is laborious but worth it at the end</p>
     </body>
 </html>
