--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -7,5 +7,9 @@
     <body>
         <h1>Pasta Recipe</h1>
         <img src="./media/pasta-img.webp" alt="A pasta dish">
+        <h2>Description</h2>
+        <p>Pasta is a very commonly made dish in the West.</p>
+        <p>It can be handmade but most often that not it is bought from the store</p>
+        <p>Here we are going to cover the premade recipe</p>
     </body>
 </html>
