Add ingredients section

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,5 +10,11 @@
         <h2>Description</h2>
         <p>Lasagna is an Italian dish.</p>
         <p>Its making is laborious but worth it at the end</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Minced meat</li>
+            <li>Pasta</li>
+            <li>Tomato sauce</li>
+        </ul>
     </body>
 </html>
