--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -11,5 +11,10 @@
         <p>Pasta is a very commonly made dish in the West.</p>
         <p>It can be handmade but most often that not it is bought from the store</p>
         <p>Here we are going to cover the premade recipe</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Premade pasta</li>
+            <li>Water</li>
+        </ul>
     </body>
 </html>
