Add steps section

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -16,5 +16,12 @@
             <li>Pasta</li>
             <li>Tomato sauce</li>
         </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Cook the pasta</li>
+            <li>Compose the dish by interlacing pasta layers and meat layers</li>
+            <li>Drizzle tomato sauce on top</li>
+            <li>Enjoy your meal!</li>
+        </ol>
     </body>
 </html>
