--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -15,6 +15,14 @@
         <ul>
             <li>Premade pasta</li>
             <li>Water</li>
+            <li>Salt</li>
         </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Boil water</li>
+            <li>Salt water</li>
+            <li>Add pasta to water</li>
+            <li>After cooked plate the pasta and enjoy!</li>
+        </ol>
     </body>
 </html>
