--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="./recipes/iskender.html">Iskender Recipe</a>
-        <a href="./recipes/.html">Pasta Recipe</a>
-        <a href="./recipes/.html">Lasagna Recipe</a>
+        <a href="./recipes/pasta.html">Pasta Recipe</a>
+        <a href="./recipes/lasagna.html">Lasagna Recipe</a>
     </body>
 </html>
